--- a/package.json
+++ b/package.json
@@ -10,7 +10,24 @@
     "tailwindcss": "^3.2.4"
   },
   "scripts": {
+    "lint:prettier": "prettier --check app/javascript/**/*.{js,vue}",
+    "lint:eslint": "eslint 'app/javascript/**/*.{js,vue}' --max-warnings=0",
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets",
     "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^4.0.0",
+    "eslint": "^8.31.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.6.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-vue": "^9.8.0",
+    "prettier": "2.8.2",
+    "prettier-config-standard": "^5.0.0",
+    "vite": "^4.0.0",
+    "vite-plugin-full-reload": "^1.0.5",
+    "vite-plugin-ruby": "^3.1.2"
   }
 }
