--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "tailwindcss": "^3.2.4"
   },
   "scripts": {
-    "lint:prettier": "prettier --check app/javascript/**/*.{js,vue}",
+    "format:prettier": "prettier --write 'app/javascript/**/*.{js,vue}'",
+    "check:prettier": "prettier --check 'app/javascript/**/*.{js,vue}'",
     "lint:eslint": "eslint 'app/javascript/**/*.{js,vue}' --max-warnings=0",
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets",
     "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify"
