--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "autoprefixer": "^10.4.13",
     "esbuild": "^0.16.15",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "vue-i18n": "^9.2.2"
   },
   "scripts": {
     "format:prettier": "prettier --write 'app/javascript/**/*.{js,vue}'",
@@ -17,6 +18,7 @@
     "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify"
   },
   "devDependencies": {
+    "@intlify/unplugin-vue-i18n": "^0.8.1",
     "@vitejs/plugin-vue": "^4.0.0",
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.6.0",
