--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.2.4",
+    "@sipec/vue3-tags-input": "^3.0.4",
     "esbuild": "^0.16.15",
     "vue-i18n": "^9.2.2"
   },
