Change Style/CaseLikeIf because if-elsif construction that contain only one if and one elsif was told to change to case-when

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -9,6 +9,9 @@ Layout/LineLength:
   Exclude:
     - "db/seeds.rb"
 
+Style/CaseLikeIf:
+  Enabled: false
+
 RSpec/MultipleExpectations:
   Max: 6
 
