--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "@hotwired/turbo-rails": "^7.2.4",
     "@sipec/vue3-tags-input": "^3.0.4",
     "esbuild": "^0.16.15",
-    "vue-i18n": "^9.2.2"
+    "vue-i18n": "^9.2.2",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "scripts": {
     "format:prettier": "prettier --write 'app/javascript/**/*.{js,vue}'",
