Fix bug that user is not deleted when data exists

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,6 +12,9 @@ Layout/LineLength:
 Style/CaseLikeIf:
   Enabled: false
 
+Metrics/ClassLength:
+  Max: 120
+
 RSpec/MultipleExpectations:
   Max: 6
 
