--- a/.gitignore
+++ b/.gitignore
@@ -45,4 +45,5 @@ node_modules
 
 /config/credentials/development.key
 /config/credentials/test.key
+/config/credentials/production.key
 vendor/bundle/
